--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -4,7 +4,6 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 22px;
 }
 
 .card__button-bookmark {
@@ -48,10 +47,11 @@
   background-color: #fff;
   border-radius: 0 0 16px 16px;
   padding: 0 24px 24px;
-  flex: 0 0 304px;
+  height: 304px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .card__date {
@@ -67,6 +67,8 @@
   font-family: "Roboto Slab", "Times New Roman", serif;
   font-weight: 400;
   font-size: 26px;
+  line-height: 1.2;
+  max-height: 60px;
   color: #1a1b22;
   margin: 0;
   margin-bottom: 16px;
@@ -84,9 +86,8 @@
   line-height: 1.4;
   color: #1a1b22;
   margin: 0;
-  margin-bottom: 18px;
   display: -webkit-box;
-  -webkit-line-clamp: 4;
+  -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -159,8 +160,7 @@
 @media screen and (max-width: 980px) {
   .card {
     width: 224px;
-    height: 420px;
-    margin-bottom: 32px;
+    max-height: 420px;
   }
 
   .card__button-bookmark {
@@ -174,7 +174,7 @@
 
   .card__description {
     padding: 16px;
-    flex: 0 0 270px;
+    height: 270px;
   }
 
   .card__date {
@@ -183,12 +183,13 @@
 
   .card__title {
     font-size: 22px;
+    line-height: 1;
     margin-bottom: 10px;
-    max-height: 82px;
+    max-height: 72px;
   }
 
   .card__text {
-    margin: 0;
+    -webkit-line-clamp: 4;
     max-height: 88px;
   }
 }
@@ -197,7 +198,6 @@
   .card {
     width: 288px;
     height: 440px;
-    margin: 20px;
   }
 
   .card__button-bookmark {
@@ -206,11 +206,12 @@
   }
 
   .card__image {
-    flex: 1 0 196px;
+    height: 196px;
   }
 
   .card__description {
-    flex: 0 0 244px;
+    height: 244px;
+    box-sizing: border-box;
   }
 
   .card__date {
